--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Containerfile --tag mjanser/oscam-emu-container:$(date +%s)
+      run: docker build . --file Containerfile --tag mjanser/oscam-emu:$(date +%s)
